# PyPerfect

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt  run.py  setup_dirs.py
api/routers/: health.py
app/: app.py
core/: config.py  logging.py
db/: connections.py  flyway.py  models.py  repository.py  session.py
db/migrations/: 20240101000000_create_bookmarks_table.sql  V1__initi.sql
db/queries/: delete_bookmark.sql  delete_my_bookmark.sql  get_link.sql  list_bookmarks.sql  save_bookmark.sql
tests/: test_health.py
